--- a/package.json
+++ b/package.json
@@ -8,5 +8,16 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "better-sqlite3": "^11.9.1",
+    "knex": "^3.1.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.14.0",
+    "oracledb": "^6.8.0",
+    "pg": "^8.15.5",
+    "pg-native": "^3.4.5",
+    "sqlite3": "^5.1.7",
+    "tedious": "^18.6.1"
   }
 }
