--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "better-sqlite3": "^11.9.1",
     "knex": "^3.1.0",
-    "pg": "^8.15.5"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.14.1",
+    "oracledb": "^6.8.0",
+    "pg": "^8.15.6",
+    "pg-native": "^3.4.5",
+    "pg-query-stream": "^4.9.6",
+    "sqlite3": "^5.1.7",
+    "tedious": "^18.6.1"
   }
 }
